// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotificationBanner styles should render a promotional banner 1`] = `
@keyframes animation-0 {
  0% {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  100% {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.circuit-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  position: relative;
  border-radius: 16px;
  background-color: var(--cui-bg-subtle);
  overflow: hidden;
  -webkit-transition: opacity 200ms ease-in-out,height 200ms ease-in-out,visibility 200ms ease-in-out;
  transition: opacity 200ms ease-in-out,height 200ms ease-in-out,visibility 200ms ease-in-out;
}

.circuit-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding: 24px;
  padding-right: 8px;
  max-width: 420px;
}

.circuit-2 {
  font-weight: 700;
  color: var(--cui-fg-normal);
  letter-spacing: -0.03em;
  font-size: 2rem;
  line-height: 2.25rem;
  font-size: 1.125rem;
  line-height: 1.5rem;
  margin-bottom: 8px;
}

@media (min-width: 768px) {
  .circuit-2 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

.circuit-3 {
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.5rem;
  font-size: 0.875rem;
  line-height: 1.25rem;
  margin-bottom: 8px;
}

@media (min-width: 768px) {
  .circuit-3 {
    font-size: 1rem;
    line-height: 1.5rem;
  }
}

.circuit-4 {
  font-size: 1rem;
  line-height: 1.5rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: auto;
  height: auto;
  margin: 0;
  cursor: pointer;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  border-width: 1px;
  border-style: solid;
  border-radius: 999999px;
  -webkit-transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  background-color: var(--cui-bg-accent-strong);
  border-color: var(--cui-border-accent);
  color: var(--cui-fg-on-strong);
  padding: calc(12px - 1px) calc(24px - 1px);
  position: relative;
  overflow: hidden;
  padding-top: calc(4px - 1px);
  padding-bottom: calc(4px - 1px);
}

.circuit-4:focus {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-4:focus::-moz-focus-inner {
  border: 0;
}

.circuit-4:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-4:disabled,
.circuit-4[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-4:hover {
  background-color: var(--cui-bg-accent-strong-hovered);
  border-color: var(--cui-border-accent-hovered);
  color: var(--cui-fg-on-strong-hovered);
}

.circuit-4:active,
.circuit-4[aria-expanded='true'],
.circuit-4[aria-pressed='true'] {
  background-color: var(--cui-bg-accent-strong-pressed);
  border-color: var(--cui-border-accent-pressed);
  color: var(--cui-fg-on-strong-pressed);
}

@media (min-width: 768px) {
  .circuit-4 {
    padding-top: calc(12px - 1px);
    padding-bottom: calc(12px - 1px);
  }
}

.circuit-5 {
  display: block;
  border-radius: 100%;
  border: 2px solid currentColor;
  border-top-color: transparent;
  -webkit-animation: animation-0 1s infinite linear;
  animation: animation-0 1s infinite linear;
  transform-origin: 50% 50%;
  width: 24px;
  height: 24px;
  position: absolute;
  opacity: 0;
  visibility: hidden;
  -webkit-transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
}

.circuit-6 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  opacity: 1;
  visibility: inherit;
  -webkit-transform: scale3d(1, 1, 1);
  -moz-transform: scale3d(1, 1, 1);
  -ms-transform: scale3d(1, 1, 1);
  transform: scale3d(1, 1, 1);
  -webkit-transition: opacity 120ms ease-in-out,-webkit-transform 120ms ease-in-out,visibility 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,transform 120ms ease-in-out,visibility 120ms ease-in-out;
}

.circuit-8 {
  display: block;
  height: auto;
  max-height: 100%;
  width: 100%;
  border-radius: 0 16px 16px 0;
  min-width: 0;
  width: 100px;
  height: auto;
  object-fit: contain;
  object-position: center;
}

<div>
  <div
    class="circuit-0"
    style="opacity: 1; height: 0px; visibility: visible;"
  >
    <div
      class="circuit-1"
    >
      <h2
        class="circuit-2"
      >
        Software update
      </h2>
      <p
        class="circuit-3"
      >
        There is updated firmware available for your card reader
      </p>
      <button
        class="circuit-4"
      >
        <span
          class="circuit-5"
        >
          <span
            class="circuit-6"
          />
        </span>
        <span
          class="circuit-7"
        >
          Update
        </span>
      </button>
    </div>
    <img
      alt="Update"
      class="circuit-8"
      src="/images/software_update.png"
      width="100"
    />
  </div>
</div>
`;

exports[`NotificationBanner styles should render with default styles 1`] = `
@keyframes animation-0 {
  0% {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  100% {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.circuit-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  position: relative;
  border-radius: 16px;
  background-color: var(--cui-bg-accent);
  overflow: hidden;
  -webkit-transition: opacity 200ms ease-in-out,height 200ms ease-in-out,visibility 200ms ease-in-out;
  transition: opacity 200ms ease-in-out,height 200ms ease-in-out,visibility 200ms ease-in-out;
}

.circuit-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding: 24px;
  padding-right: 8px;
  max-width: 420px;
}

.circuit-2 {
  font-weight: 700;
  color: var(--cui-fg-normal);
  letter-spacing: -0.03em;
  font-size: 2rem;
  line-height: 2.25rem;
  font-size: 1.125rem;
  line-height: 1.5rem;
  margin-bottom: 8px;
}

@media (min-width: 768px) {
  .circuit-2 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

.circuit-3 {
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.5rem;
  font-size: 0.875rem;
  line-height: 1.25rem;
  margin-bottom: 8px;
}

@media (min-width: 768px) {
  .circuit-3 {
    font-size: 1rem;
    line-height: 1.5rem;
  }
}

.circuit-4 {
  font-size: 1rem;
  line-height: 1.5rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: auto;
  height: auto;
  margin: 0;
  cursor: pointer;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  border-width: 1px;
  border-style: solid;
  border-radius: 999999px;
  -webkit-transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  background-color: var(--cui-bg-accent-strong);
  border-color: var(--cui-border-accent);
  color: var(--cui-fg-on-strong);
  padding: calc(12px - 1px) calc(24px - 1px);
  position: relative;
  overflow: hidden;
  padding-top: calc(4px - 1px);
  padding-bottom: calc(4px - 1px);
}

.circuit-4:focus {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-4:focus::-moz-focus-inner {
  border: 0;
}

.circuit-4:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-4:disabled,
.circuit-4[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-4:hover {
  background-color: var(--cui-bg-accent-strong-hovered);
  border-color: var(--cui-border-accent-hovered);
  color: var(--cui-fg-on-strong-hovered);
}

.circuit-4:active,
.circuit-4[aria-expanded='true'],
.circuit-4[aria-pressed='true'] {
  background-color: var(--cui-bg-accent-strong-pressed);
  border-color: var(--cui-border-accent-pressed);
  color: var(--cui-fg-on-strong-pressed);
}

@media (min-width: 768px) {
  .circuit-4 {
    padding-top: calc(12px - 1px);
    padding-bottom: calc(12px - 1px);
  }
}

.circuit-5 {
  display: block;
  border-radius: 100%;
  border: 2px solid currentColor;
  border-top-color: transparent;
  -webkit-animation: animation-0 1s infinite linear;
  animation: animation-0 1s infinite linear;
  transform-origin: 50% 50%;
  width: 24px;
  height: 24px;
  position: absolute;
  opacity: 0;
  visibility: hidden;
  -webkit-transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
}

.circuit-6 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  opacity: 1;
  visibility: inherit;
  -webkit-transform: scale3d(1, 1, 1);
  -moz-transform: scale3d(1, 1, 1);
  -ms-transform: scale3d(1, 1, 1);
  transform: scale3d(1, 1, 1);
  -webkit-transition: opacity 120ms ease-in-out,-webkit-transform 120ms ease-in-out,visibility 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,transform 120ms ease-in-out,visibility 120ms ease-in-out;
}

.circuit-8 {
  display: block;
  height: auto;
  max-height: 100%;
  width: 100%;
  border-radius: 0 16px 16px 0;
  min-width: 0;
  width: 100px;
  height: auto;
  object-fit: contain;
  object-position: center;
}

<div>
  <div
    class="circuit-0"
    style="opacity: 1; height: 0px; visibility: visible;"
  >
    <div
      class="circuit-1"
    >
      <h2
        class="circuit-2"
      >
        Software update
      </h2>
      <p
        class="circuit-3"
      >
        There is updated firmware available for your card reader
      </p>
      <button
        class="circuit-4"
      >
        <span
          class="circuit-5"
        >
          <span
            class="circuit-6"
          />
        </span>
        <span
          class="circuit-7"
        >
          Update
        </span>
      </button>
    </div>
    <img
      alt="Update"
      class="circuit-8"
      src="/images/software_update.png"
      width="100"
    />
  </div>
</div>
`;
